--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,24 @@
 site_name: My Docs
 
+plugins:
+    - search
+    - mkdocs_pymdownx_material_extras
+
+nav:
+    - Home: 'index.md'
+    - Variables:
+      - 'Variables/variable.md'
+      - 'Declaration': 'Variables/variable_declaration.md'
+      - 'Definition': 'Variables/variable_definition.md'
+      - 'Memory Allocation': 'Variables/memory_allocation.md'
+
+markdown_extensions:
+    - admonition
+    - pymdownx.details
+    - pymdownx.superfences
 theme:
   name: material
+  palette:
+    scheme: dracula
+    primary: deep purple
+    accent: deep purple
